# cs179-final

./: .clang-format  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  PROPOSAL.md  README.md  RESULTS.md  TODO.md
datasets/sample100/: VERIFICATION.md  eval_pairs.csv  eval_subset_stratified.txt  excluded_tracks.txt
docs/: ACCURACY-OPTIMIZATIONS.md  OPTIMIZATIONS_CHATGPT.md  OPTIMIZATIONS_GEMINI.md  PAPER-MAPPING.md  PAPER-VS-OURS.md  PRESENTATION.md  STYLE.md  TECHNICAL.md  TESTING.md  gpu-library-vs-custom-kernels.md
plots/: PERF-CHARACTERIZATION.md
plots/00_baseline/: DIAGNOSTICS.md  summary.csv
plots/01_tf32_dtw/: DIAGNOSTICS.md  summary.csv
plots/02_fused/: DIAGNOSTICS.md  summary.csv
plots/03_xcand/: DIAGNOSTICS.md  summary.csv
plots/04_final/: DIAGNOSTICS.md  summary.csv
plots/05_mel/: DIAGNOSTICS.md  summary.csv
plots/06_fil/: DIAGNOSTICS.md  ncu_distance.txt  ncu_dtw.txt  ncu_forest.txt  ncu_fused.txt  ncu_gemm.txt  ncu_stalls_distance_batched.txt  ncu_stalls_dtw_band_kernel.txt  ncu_stalls_fused_wh_ratio.txt  summary.csv
plots/sweep/: sweep_results.csv
src/common/: audio.cpp  audio.hpp  match_info.hpp  params.hpp
src/cpu/: cpu_demo.cpp  cpu_pipeline.cpp  cpu_pipeline.hpp
src/gpu/: device_buffer.cuh  error_check.cuh  gemm.cu  gemm.cuh  gpu_detect.cu  gpu_pipeline.cu  kernels.cu  (+3 more)
tests/: make_fixtures.sh  run_ladder.sh
tools/: DATASET.md  analyze_profile.py  eval_sample100.py  export_forest.py  plot_accuracy.py  plot_gpu_load.py  plot_speedup.py  pool_analysis.py  scrape_sample100.py  sweep_configs.py  train_rf.py  visualize_match.py
